fixes build issue and improves performance